fix rule search connector UT